Fixes #1060 (loading indicator badly placed). Re-fixes #1055 (clean tab content immediately when changing).
svn changeset:2660 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
@@ -112,8 +112,10 @@
 .i-tabsheet-loading .i-tabsheet-tabs .gwt-TabBarItem-selected span{
 	background: transparent url(../common/img/ajax-loader.gif) no-repeat;
 	display: block;
-	padding-left: 20px;
-	margin-left: -20px;
+	margin-left:-10px;
+	padding-left:10px;
+	margin-top:-12px;
+	padding-top:12px;
 }
 
 
