--- a/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
@@ -89,3 +89,18 @@
 	margin: 0.3em 0 0 0;
 }
 
+
+/* Layout margin values */
+
+.i-layoutmargin-top {
+	margin-top: 15px;
+}
+.i-layoutmargin-bottom {
+	margin-bottom: 15px;
+}
+.i-layoutmargin-left {
+	margin-left: 18px;
+}
+.i-layoutmargin-right {
+	margin-right: 18px;
+}
