Notifications API. + small fix for richtextarea
svn changeset:2712 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/styles.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/styles.css
@@ -8,6 +8,7 @@
 @import "table/table.css";
 @import "slider/slider.css";
 @import "window/window.css";
+@import "window/notification.css";
 @import "caption/caption.css";
 @import "tree/tree.css";
 @import "splitpanel/splitpanel.css";
