some changes to context menu positioning
svn changeset:2721 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
@@ -65,6 +65,7 @@
 	padding: 2px 20px 2px 5px;
 	cursor: pointer;
 	vertical-align: middle;
+	white-space: nowrap;
 }
 
 .i-contextmenu .gwt-MenuItem-selected {
