TabSheet-keep-content-height v2
svn changeset:2736 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
@@ -118,8 +118,8 @@
 }
 
 .i-tabsheet-loading .i-tabsheet-content * {
-	opacity: 0;
-	filter: Alpha(opacity=0);
+	visibility: hidden;
+	oveflow: hidden;
 }
 
 
