Background for RichTextArea, could still use some styling
svn changeset:2786 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/textfield/textfield.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/textfield/textfield.css
@@ -28,6 +28,9 @@
 	border: 1px solid #b6b6b6;
 	overflow: hidden;
 }
+.i-richtextarea .gwt-RichTextArea {
+	background: #fff url(img/bg.png) repeat-x;
+}
 .i-richtextarea iframe {
 	border: 0;
 }
