--- a/src/com/itmill/toolkit/terminal/gwt/public/default/tree/tree.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/tree/tree.css
@@ -1,27 +1,22 @@
-.i-tree .gwt-TreeItem {
-	cursor: pointer;
+.i-tree-node {
+	background-image: url(img/collapsed.png);
+	background-repeat: no-repeat;
 }
-
-.i-tree-node-selected .gwt-TreeItem {
+.i-tree-node-expanded {
+	background-image: url(img/expanded.png);	
+}
+.i-tree-node-leaf {
+	background-image: none;
+}
+.i-tree-node-caption {
+	cursor: pointer;
+	margin-left:18px;
+}
+.i-tree-node-selected span {
 	background: #5daee8;
 	color: #fff;
-	display: block;
-	padding: 1px;
-	margin: -1px -1px;
+	padding: 0 2px;
 }
-.i-tree-node-selected .gwt-TreeItem:before {
-	display: block;
-	float: left;
-	content: url(../common/img/blank.gif);
-	width: 1px;
-	background: #5daee8;
-	margin: 0 1px 0 -2px;
-}
-.i-tree-node-selected .gwt-TreeItem:after {
-	display: block;
-	float: right;
-	content: url(../common/img/blank.gif);
-	width: 1px;
-	background: #5daee8;
-	margin: 0 -2px 0 1px;
+.i-tree-node-children {
+	padding-left: 18px;
 }
