MAJOR UPDATE: -Layout API changes: Layout extends Sizeable, Layout has two methods setMargin. -OrderedLayout and GridLayout got two new mehtods: setSpacing and setComponentAlignment. -Client-side layout implementations now mainly done using TABLE elements (changes to IOrderedLayout and IExpandLayout). -IScrollTable initial height calculation modified (small fix, clientHeight -> offsetHeight). -Some test modified to conform to new layout API. -Small typo fixes in comments. -OrderedLayout fix when changing orientation on the fly. -Panel and TabSheet are no longer Layouts, only ComponentContainers. -Refactored layout margins to use MarginInfo class, more readable, self-documenting code now.
svn changeset:2827 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
@@ -88,27 +88,28 @@
 	vertical-align: middle;
 }
 
-/* Provide some extra whitespace for wrapped elements
-   (these elements usually need the extra space, since 
-   they aren't even handling their own caption) */
-.i-captionwrapper {
-	margin: 0.3em 0 0 0;
-}
 
 
+/* TODO move to layout.css */
 /* Layout margin values */
 
-.i-layoutmargin-top {
-	margin-top: 15px;
-}
-.i-layoutmargin-bottom {
-	margin-bottom: 15px;
+
+.i-layoutmargin-top .i-orderedlayout-toppad div, 
+.i-layoutmargin-bottom .i-orderedlayout-bottompad div,
+.i-layoutmargin-top .i-expandlayout-toppad div,
+.i-layoutmargin-bottom .i-expandlayout-bottompad div,
+.i-layoutmargin-top .i-orderedlayout-toppad td, 
+.i-layoutmargin-bottom .i-orderedlayout-bottompad td,
+.i-layoutmargin-top .i-expandlayout-toppad td,
+.i-layoutmargin-bottom .i-expandlayout-bottompad td {
+	height: 15px;
+	overflow: hidden;
 }
 .i-layoutmargin-left {
-	margin-left: 18px;
+	padding-left: 18px;
 }
 .i-layoutmargin-right {
-	margin-right: 18px;
+	padding-right: 18px;
 }
 
 .i-link {
