--- a/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
@@ -6,6 +6,15 @@
 	line-height: 18px;
 	height: 100%;
 }
+/* body tag created by servlet */
+.i-generated-body {
+	background: #e9eced;
+	width:100%;
+	height:100%;
+	border:0;
+	margin:0;
+	overflow:auto;
+}
 
 .i-view {
 	height: 100%;
