-Implemented simple loading indicator into ApplicationConnection somewhat as suggested in #1101. Needs more work. -Transparent PNG fix for IE6 in table.css.
svn changeset:2862 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
@@ -125,3 +125,20 @@
 	text-decoration: underline;
 	cursor:pointer;
 }
+
+
+
+/* Loading indicator states */
+.i-loading-indicator,
+.i-loading-indicator-delay,
+.i-loading-indicator-wait {
+	width: 31px;
+	height: 31px;
+	background: transparent url(img/loading-indicator.gif);
+}
+.i-loading-indicator-delay {
+	background: transparent url(img/loading-indicator-delay.gif);
+}
+.i-loading-indicator-wait {
+	background: transparent url(img/loading-indicator-wait.gif);
+}
