--- a/src/com/itmill/toolkit/terminal/gwt/public/default/textfield/textfield.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/textfield/textfield.css
@@ -24,6 +24,19 @@
 	border: none;
 }
 
+/* TODO impl all textarea styles */
+.i-textarea {
+	background: #fff url(img/bg.png) repeat-x;
+	padding: 2px;
+	border: 1px solid #b6b6b6;
+	border-top-color: #9d9d9d;
+	border-bottom-color: #d6d6d6;
+	border-right-color: #d6d6d6;
+	margin: 0;
+	font-size: 13px;
+}
+
+
 .i-richtextarea {
 	border: 1px solid #b6b6b6;
 	overflow: hidden;
