--- a/src/com/itmill/toolkit/terminal/gwt/public/default/tree/tree.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/tree/tree.css
@@ -13,6 +13,7 @@
 .i-tree-node span {
 	padding: 0 2px;
 	cursor: pointer;
+	white-space: nowrap;
 }
 .i-tree-node-selected span {
 	background: #5daee8;
