--- a/src/com/itmill/toolkit/terminal/gwt/public/default/expandlayout/expandlayout.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/expandlayout/expandlayout.css
@@ -21,15 +21,22 @@
 	height:100%;
 }
 
-.i-expandlayout-i-layoutmargin-top {
+.i-expandlayout-margin-top {
 	padding-top: 15px;
 }
-.i-expandlayout-i-layoutmargin-bottom {
+.i-expandlayout-margin-right {
+	padding-right: 18px;
+}
+.i-expandlayout-margin-bottom {
 	padding-bottom: 15px;
 }
+.i-expandlayout-margin-left {
+	padding-left: 18px;
+}
+
 .i-expandlayout-vspacing {
-	margin-top: 15px;
+	margin-top: 8px;
 }
 .i-expandlayout-hspacing {
-	margin-left: 18px;
+	margin-left: 8px;
 }
