Implemented layout spacing in IOrderedLayout.
svn changeset:3236 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/orderedlayout/orderedlayout.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/orderedlayout/orderedlayout.css
@@ -10,3 +10,10 @@
 .i-orderedlayout-margin-left {
 	padding-left: 18px;
 }
+
+.i-orderedlayout-vspacing {
+	margin-top: 8px;
+}
+.i-orderedlayout-hspacing {
+	padding-left: 8px;
+}
