--- a/src/com/itmill/toolkit/terminal/gwt/public/default/accordion/accordion.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/accordion/accordion.css
@@ -1,17 +1,18 @@
 .i-accordion {
 	outline: none;
-	border-bottom: 1px solid #c8cccd;
+	overflow: hidden;
 }
 
 .i-accordion-item-caption {
-	height: 25px;
-	padding: 6px 0 0 18px;
+	height: 24px;
+	padding: 7px 0 0 18px;
 	overflow: hidden;
 	white-space: nowrap;
 	background: #edf0f0 url(../tabsheet/img/tab-bg.png);
 	font-size: 15px;
 	color: #656d73;
 	border-top: 1px solid #c8cccd;
+	cursor: pointer;
 }
 
 .i-accordion-item-caption span {
@@ -24,6 +25,7 @@
 	background: #d5dee2 url(img/selected-bg.png);
 	border-top-color: #cbd7de;
 	border-bottom-color: #bfc9d4;
+	cursor: default;
 }
 
 .i-accordion-item-open .i-accordion-item-caption span {
